	Coverity #484: Fix an off-by-one in module refcounting.

	* damageext/damageext.c:
	Coverity #491: Check version number correctly.

	* xfixes/xfixes.c:
	Coverity #487: Check version number correctly.

	* hw/xfree86/common/xf86VidMode.c:
	Coverity #490: Fix a range check in xf86vidmode extension.

	* xfixes/region.c:
	Coverity #807: Fix a memory leak in XFixesExpandRegion.

2006-03-15  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* hw/xfree86/dri/dri.c: (DRIExtensionInit):
	Fix DRIExtensionInit() to not register callbacks when it hasn't been
	initialized for the current server generation. Fixes a problem where
	it would use stale private index and blow up in colorful ways if no
	driver called DRIScreenInit() on the second generation (which happens
	due to a bug in radeon that i'll fix separately). Note: clearing the
	index in DRIReset() wouldn't work as DRIReset() is called before the
	CloseScreen() chain

2006-03-15  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* hw/xfree86/common/xf86fbman.c: (localAllocateOffscreenLinear):
	Make xf86 linear allocator smarter when dealing with alignment
	constraints when falling back to X/Y allocations. Fixes various
	problems of Xv allocation failures, notably with "nv" driver.

2006-03-14  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaDriverInit):
	* exa/exa_migration.c: (exaDoMigration):
	* exa/exa_priv.h:
	* hw/xfree86/exa/examodule.c: (exaXorgCloseScreen),
	(exaDDXDriverInit):
	Add a new migration scheme, "always", which will move pixmaps to their
	desired location always (unless they don't fit in FB, in which case they
	all get moved out for software rendering).  The default remains as
	before, but can be controlled by the MigrationHeuristic xorg.conf option
	(which is intentionally not documented, as it may be short-lived).  This
	is part of the exa-damagetrack work, which appears stable in testing
	with fakexa, unlike the work as a whole.

2006-03-14  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: